--- a/trunk/MacLibre3/Info.plist
+++ b/trunk/MacLibre3/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>maclibre.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.maclibre.MacLibre3</string>
 	<key>CFBundleInfoDictionaryVersion</key>
